# RKNN_YOLOV5S_CPP

./: CMakeLists.txt  README.md
include/: postprocess.h
include/opencv2/: cvconfig.h  opencv_modules.hpp
include/opencv2/core/: fast_math.hpp
libs/: libopencv_highgui.so.3.4.1  libopencv_videoio.so.3.4.1
src/: main.cc  postprocess.cc
